<resources>
    <string name="app_name">Final Project</string>
    <string name="CovidNavButton">Covid-19</string>
    <string name="AudioNavButton">Audio Database</string>
    <string name="RecipeNavButton">Recipe</string>
    <string name="TicketMasterNavButton">TicketMaster</string>
    <string name="city_search">City:</string>
    <string-array name="navItems">
        <item>Home</item>
        <item>Covid-19</item>
        <item>Audio Database</item>
        <item>Recipe</item>
        <item>TicketMaster</item>
    </string-array>
    <string name="searchText">Search..</string>
    <string name="searchText1">Invalid Information or No results</string>
    <string name="country">Country:</string>
    <string name="conCode">Country Code:</string>
    <string name="province">Province:</string>
    <string name="cases">Cases:</string>
    <string name="status">Status:</string>
    <string name="SearchButtonText">Search</string>
    <string name="searchRecipesEdit">Search Recipes…</string>
    <string name="recipeIconDesc">Icon of a recipe</string>
    <string name="favouriteButton">Favourite</string>
    <string name="recipeRowText">Recipe Name</string>
    <string name="radius_search">Radius</string>
    <string name="HomeNavButton">Hone</string>
    <string name="event_name">Event Name</string>
    <string name="eventIcon">Event Icon</string>
    <string name="city">City</string>
    <string name="startDate">Start Date</string>
    <string name="minPrice">Minimum Price</string>
    <string name="maxPrice">Maximum Price</string>
    <string name="url">BUY TICKET</string>
    <string name="urlChoice">Would you Like to open the event page in your browser?</string>
    <string name="urlTitle">Event URL</string>
    <string name="back">BACK</string>
    <string name="from">From:YYYY-MM-DD</string>
    <string name="to">To:YYYY-MM-DD</string>
    <string name="warning">warning! </string>
    <string name="delete">Are you sure to delete this? </string>
    <string name="norecover">It will be delete permanently. </string>
    <string name="InvalidRadious">INVALID RADIUS: please enter a whole number.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="datNotFound">Data not found.</string>
    <string name="Version">1.0</string>
    <string name="groupName">Chris Hing, Jihyun Park, Kasia Kuzma, Mohamed Ahmed</string>
    <string name="homeButton">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="help">help</string>
    <string name="ticketMasterHelp">Enter a the name of the city you wish to search.  Enter a radius in miles to extend the search outside the city. Select Favorites to show Favorites.</string>
    <string name="ok">OK</string>
    <string name="ticketMasterHelpTitle">SEARCH FOR TICKETMASTER EVENTS</string>
    <string name="deletSure">Are you sure you would like to delete this information?</string>
    <string name="attention">Attention</string>
    <string name="home">You clicked to go Home</string>
    <string name="ticket">You clicked to go to the TicketMaster</string>
    <string name="audio"> You clicked to find to music</string>
    <string name="covid">You clicked to get the information about status of the Covid-19</string>
    <string name="recipe">You clicked to find the Recipe</string>
    <string name="yesOrNo">Click OK to continue, or Cancel to stop:</string>
    <string name="back1">Back</string>
    <string name="store">Store</string>
    <string name="delete1">Delete</string>
    <string name="stored">This information is saved !! </string>
    <string name="helpTitle">Help Center</string>
    <string name="covidHelp">This site shows the results of the confirmed cases Corona Virus. Please enter the country and date that you want to know. For example, Canada from 2020\u201410\u201420 to 2020\u201410\u201421, you can see the results of Canada confirmed cases by the Province.</string>
    <string name="confirm">OK</string>
    <string name="repository">Load Repository</string>
    <string name="confirm1">CONFIRM</string>
    <string name="do_delete">Event Deletion</string>
    <string name="recipeTitle">Recipe Name</string>
    <string name="recipeIngredients">Recipe Ingredients</string>
    <string name="ingredients">Ingredients</string>
    <string name="goToBrowser">Go to Recipe in Browser</string>
    <string name="backButtonRecipe">Back</string>
    <string name="alertToRecipeBrowser">Do you want to look at this recipe in a browser?</string>
    <string name="saveRecipe">Favourite Recipe</string>
    <string name="favouriteRecipe">Favourite</string>
    <string name="saveRecipeConfirmation">Favourite this recipe?</string>
    <string name="homeItem">Home Page</string>
    <string name="recipeItem">Recipe</string>
    <string name="ticketItem">Ticket Master</string>
    <string name="helpRecipe">Help</string>
    <string name="covidItem">Covid-19 Data</string>
    <string name="audioItem">Audio Database</string>
    <string name="helpTitleRecipe">How To Use Recipe Search Page</string>
    <string name="helpMessage">To use, input the name of a recipe. The more general the term, the more recipes that will show in the results</string>
    <string name="recipeToast">Recipe not found</string>
    <string name="favouritesNotFound">No favourites found</string>
    <string name="confirmSaveRecipe">Recipe Has Been Saved</string>
    <string name="recipesFound">Recipes Found</string>
    <string name="helpOk">OK</string>
    <string name="deletConfirm">Are you sure you would like to delete this event?</string>
    <string name="saveToFavorites">Save Recipe To Favorites</string>
    <string name="showFavorites" >Favorites</string>
    <string name="added">Event added to favorites</string>
    <string name="saveTicketToFavorites">Save To Favorites</string>

    <string name="deleteRecipe">Deleting a Recipe</string>
    <string name="confirmDeleteRecipe">Do you want to delete this recipe?</string>
    <string name="okRecipeDeleted">Recipe has been deleted</string>
    <string name="retrievedRecipes">Retrieved Recipes</string>


</resources>