<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/homeButton"
        android:icon="@drawable/bacteria"
        android:orderInCategory="50"
        app:showAsAction="always"/>

    <item android:id="@+id/ticket"
        android:title="@string/TicketMasterNavButton"
        android:icon="@drawable/ticket"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/food"
        android:icon="@drawable/food"
        android:title="@string/RecipeNavButton"
        app:showAsAction="ifRoom|collapseActionView"
        android:orderInCategory="200"/>

    <item android:id="@+id/audio"
        android:icon="@drawable/music"
        android:orderInCategory="300"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/AudioNavButton"/>

    <item android:id="@+id/bacteria"
        android:icon="@drawable/bacteria"
        android:orderInCategory="400"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/CovidNavButton"/>

    <item android:id="@+id/search_item"
        android:orderInCategory="500"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/SearchButtonText"/>    <!-- This uses showAsAction=always, so look at icon= parameter -->

</menu>