<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <androidx.drawerlayout.widget.DrawerLayout
      android:id="@+id/drawer_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:openDrawer="start">
    <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->

    <LinearLayout android:orientation="vertical"
      android:gravity="top"
      android:layout_height="match_parent"
      android:layout_width="match_parent">


      <Button
          android:id="@+id/covid"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/CovidNavButton"/>

      <Button
          android:id="@+id/audioData"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/AudioNavButton"/>

      <Button
          android:id="@+id/recipe"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/RecipeNavButton" />

      <Button
          android:id="@+id/ticketMaster"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/TicketMasterNavButton" />
  </LinearLayout>

    <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/example_menu"
        android:id="@+id/nav_view"/>

  </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>