<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <!-- THIS IS WHAT IS VISIBLE ON SCREEN:-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout"
            tools:ignore="UseSwitchCompatOrMaterialXml">

            <TextView
                android:id="@+id/cSearch"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:text="@string/city_search" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_toStartOf="@+id/searchButton"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/cSearch"
                android:id="@+id/citySearch"
                android:textSize="25sp"
                android:autofillHints="@string/city_search"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/rSearch"
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_below="@id/citySearch"
                android:text="@string/radius_search" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_below="@id/rSearch"
                android:layout_toStartOf="@+id/searchButton"
                android:layout_alignParentStart="true"
                android:id="@+id/radius"
                android:textSize="25sp"
                android:autofillHints="@string/radius_search"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_alignParentTop="true"
                android:text="@string/help"
                android:layout_alignParentEnd="true"
                />
            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="100sp"
                android:layout_below="@+id/help"
                android:text="@string/SearchButtonText"
                android:layout_alignParentEnd="true"
                />
            <ListView
                android:id="@+id/theListView"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_above="@+id/loadBar"
                android:layout_below="@+id/searchButton"
                />

            <ProgressBar
                android:id="@+id/loadBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

        <!-- THIS IS WHAT IS WHAT POPS OUT FROM THE SIDE:-->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_layout"
            app:menu="@menu/example_menu"
            android:id="@+id/nav_view"/>

    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>